<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HPDuel</string>

    <string-array name="spells">
        <item>stupify</item>
        <item>impedimenta</item>
        <item>furnunculus</item>
        <item>expelliarmus</item>
        <item>protego</item>
    </string-array>

    <string name="cast">cast</string>
    <string name="_50">50</string>
    <string name="vs_">vs.</string>
    <string name="player">Player</string>
    <string name="voldemort">Voldemort</string>

</resources>